--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
 .App {
-  text-align: center;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* SEARCH */
+.search-book-box{
+  background-image: url('../src/assets/images/book-bg.jpg');
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 2rem 0;
 }
 
-.App-link {
-  color: #61dafb;
+.search-book-box h1{
+  color: #fff;
+  font-weight: 300;
+}
+.filter-box{
+  display: flex;
+  gap: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.filter-box input{
+  padding: 4px 10px;
+  border-radius: 2px;
+  border: none;
+}
+
+.filter-box button{
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+.filter-box button:active{
+  background-color: #8b8b8b;
+}
+
+/* BOOKS */
+
+.books-box{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  padding: 1rem 3rem;
+}
+.book-box{
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+.book-box img{
+  height: 200px;
+}
+
+.action-box{
+  display: flex;
+  gap: 10px;
+}
+.action-box a{
+  text-decoration: none;
+  color: #a09e9e;
+  cursor: pointer;
+  font-size: 20px;
+}
+.action-box a:hover{
+  color: #222121;
+}
+
+
+/* MODAL */
+.modal-header {
+  text-align: center;
+}
+.modal-close-button{
+  max-width: 50px;
+  align-self: center;
+  margin-top: 0.5rem;
+}
+.detail-info-line{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.detail-info-line h4{
+  margin: 0;
 }
